--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,21 @@
-llama_index==0.10.42
+llama-index==0.10.42
+llama-index-agent-openai==0.2.6
+llama-index-cli==0.1.12
+llama-index-core==0.10.42
+llama-index-embeddings-huggingface==0.2.1
+llama-index-embeddings-openai==0.1.10
+llama-index-indices-managed-llama-cloud==0.1.6
+llama-index-legacy==0.9.48
+llama-index-llms-openai==0.1.21
+llama-index-multi-modal-llms-openai==0.1.6
+llama-index-program-openai==0.1.6
+llama-index-question-gen-openai==0.1.3
+llama-index-readers-file==0.1.23
+llama-index-readers-llama-parse==0.1.4
+llama-index-vector-stores-lancedb==0.1.4matplotlib==3.9.0
+networkx==3.3
 numpy==1.26.4
-pydantic==2.7.2
+pydantic==2.7.3
 setuptools==70.0.0
 tenacity==8.3.0
+torch==2.3.0
