--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,9 @@ llama-index-program-openai==0.1.6
 llama-index-question-gen-openai==0.1.3
 llama-index-readers-file==0.1.23
 llama-index-readers-llama-parse==0.1.4
-llama-index-vector-stores-lancedb==0.1.4matplotlib==3.9.0
+llama-index-vector-stores-lancedb==0.1.4
 llama-index-llms-huggingface==0.2.3
+matplotlib==3.9.0
 transformers[torch]
 huggingface_hub[inference]
 networkx==3.3
